syntax = "proto3";

package sso;

option go_package = "ozon/protos/gen/go/sso";

service SSO {
  /* RegisterNewUser регистрирует нового пользователя */
  rpc RegisterNewUser (RegisterRequest) returns (RegisterResponse);
  /* Login авторизовывает пользователя */
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
